<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/app_primary"
    android:padding="16dp"
    tools:context=".SplashActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginVertical="50dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/large_circle"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/empty"
                    app:srcCompat="@drawable/vector_circle_24"
                    android:layout_gravity="center"
                    app:tint="@color/white10"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/medium_circle"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/empty"
                    app:srcCompat="@drawable/vector_circle_24"
                    android:layout_gravity="center"
                    app:tint="@color/white10"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/small_circle"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/empty"
                    app:srcCompat="@drawable/vector_circle_24"
                    android:layout_gravity="center"
                    app:tint="@color/white10"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/logo_cubbi_2" />
            </RelativeLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="80sp"
                app:fontFamily="@font/righteous"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_description"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:fontFamily="@font/raleway_semibold"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_developed_by"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white50"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/raleway_semibold"
        />

</RelativeLayout>